# psu-intro-to-git

./: .gitignore  README.md  _quarto.yml  basic-git-workflow.qmd  branching-strategies.qmd  collaboration.qmd  deleting-branches.qmd  git-client.qmd  git-mechanics.qmd  git-overview.qmd  github-setup.qmd  how-git-works.qmd  index.qmd  install-git.qmd  making-your-first-repo.qmd  merge-conflicts.qmd  misc-troubleshooting.qmd  prereqs.qmd  pyproject.toml  recommended-practices.qmd  todo.qmd
.github/workflows/: publish.yml  render.yml
