[tool.poetry]
name = "sir-model"
version = "0.1.0"
description = "A repository used to demostrate Git and GitHub for the Penn State University's Center for Infectious Disease Dynamics workshop"
authors = ["Callum Arnold <24391445+arnold-c@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
# packages = [{include = "sir_model"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^1.24.2"
scipy = "^1.10.1"
pandas = "^1.5.3"
plotnine = "^0.10.1"
ptpython = "^3.0.23"
ipykernel = "^6.22.0"
blue = "^0.9.1"
flake8 = "4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
